<resources>
    <string name="app_name">Store</string>
    <string name="intro_title">Welcome to the App!!</string>
    <string name="intro_login">Alraedy have an account? <font color='#FFEB3B'> Sign in</font></string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">My orders</string>
    <string name="menu_carts">My Carts</string>
    <string name="menu_orders">My Carts</string>
    <string name="menu_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="intro">Let\'s Get Started</string>
    <string name="my_cart">My Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="information">Information</string>
    <string name="your_delivery_address">Your Delivery Address</string>
    <string name="ny_downtown_no_97">NY - Downtown No 97</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cash">Cash</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="order_now">Order Now</string>
    <string name="client_username">Client username</string>
    <string name="username">Username:</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="you_location_is">You Location is:</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="unipiplishopping">UnipiPLIShopping</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="items">Items</string>
    <string name="fruits">Fruits</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="drinks">Drinks</string>
    <string name="hello_user">Hello, User!</string>
    <string name="let_s_find_your_favourite_products">Let\'s find your favourite products</string>
    <string name="category">Category</string>
    <string name="japanese_cherry_blossom">Japanese Cherry Blossom</string>
    <string name="_15_00">$ 15.00</string>
    <string name="_250_ml">250 ml</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_description">Product Description</string>
    <string name="body">Body</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="username2">Username</string>
    <string name="background">Background</string>
    <string name="font_size">Font Size:</string>
    <string name="save_prefrences">Save Prefrences</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="search_for_stores">Search For Stores</string>
    <string name="no_items_added_to_wishlist">No items added to WishList</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="most_popular">Most Popular</string>
    <string name="hello_emma">Hello, Emma!</string>
    <string name="let_s_find_your_favourate_body_care_product">Let\'s find your favourite body care product</string>

    <string-array name="colors_array">
        <item>Pink</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>

    <!-- Μεγέθη γραμματοσειράς -->

</resources>