<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context=".Activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/intro" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_title"
                android:layout_marginTop="24dp"
                android:textSize="31sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:onClick="registration"
                android:id="@+id/registration_Btn"
                android:background="@drawable/yellow_bg"
                style="@android:style/Widget.Button"
                android:layout_marginEnd="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textStyle="bold"
                android:text="@string/intro"
                android:textColor="@color/black"
                android:textSize="21sp"/>

            <TextView
                android:onClick="login"
                android:id="@+id/login_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_login"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                tools:ignore="OnClick" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>